--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "babel-loader": "^9.1.3",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "node-sass": "^9.0.0",
-    "sass-loader": "^13.3.2",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.1",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
