--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^9.1.3",
     "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^6.8.1",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
     "node-sass": "^9.0.0",
     "postcss-loader": "^7.3.3",
